--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "vite": "^5.4.1",
-    "yup": "^1.4.0"
+    "vite": "^5.4.1"
   }
 }
