--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@svgr/plugin-svgo": "^8.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -36,6 +37,7 @@
     "react-router-dom": "^6.27.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
