--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "vite": "^5.4.1",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "yup": "^1.4.0"
   }
 }
